--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -26,7 +26,7 @@
     content: '';
 
     position: absolute;
-    z-index: -1;
+    z-index: 1;
     top: 50%;
     left: 50%;
 
